crates/dump/src/reader/snapshots/dump__reader__test__import_dump_v1-7.snap
---
source: dump/src/reader/mod.rs
expression: movies.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [
    "genres",
    "id"
  ],
  "sortableAttributes": [
    "genres",
    "id"
  ],
  "rankingRules": [
    "typo",
    "words",
    "proximity",
    "attribute",
    "exactness",
    "release_date:asc"
  ],
  "stopWords": [],
  "synonyms": {},
  "distinctAttribute": null
}
