crates/dump/src/reader/snapshots/dump__reader__test__import_dump_v2-5.snap
---
source: dump/src/reader/mod.rs
expression: products.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [],
  "rankingRules": [
    "words",
    "typo",
    "proximity",
    "attribute",
    "exactness"
  ],
  "stopWords": [],
  "synonyms": {
    "android": [
      "phone",
      "smartphone"
    ],
    "iphone": [
      "phone",
      "smartphone"
    ],
    "phone": [
      "android",
      "iphone",
      "smartphone"
    ]
  },
  "distinctAttribute": null
}
