crates/dump/src/reader/snapshots/dump__reader__test__import_dump_v3-8.snap
---
source: dump/src/reader/mod.rs
expression: movies.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [
    "genres",
    "id"
  ],
  "sortableAttributes": [
    "release_date"
  ],
  "rankingRules": [
    "words",
    "typo",
    "proximity",
    "attribute",
    "sort",
    "exactness",
    "release_date:asc"
  ],
  "stopWords": [],
  "synonyms": {},
  "distinctAttribute": null
}
